[package]
name = "bndb-sim"
version = "0.1.0"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
bincode = "^0.9"
rand = "^0.4"
#zip = "^0.3"
tar = "^0.4"
rayon = "^0.9"
bndb-core = { path = "../bndb-core" }
image = "^0.18"

[patch.crates-io]
num-rational = { path = "../../num-rational" }


[dependencies.cgmath]
version = "^0.16"
features = ["serde"]
