[package]
name = "bndb-view"
version = "0.1.0"
authors = ["Andrew Palmer <andrew.pa@outlook.com>"]

[dependencies]
bndb-core = { path = "../bndb-core" }
glutin = "^0.12"
gl = "^0.9"
serde = "^1.0"
serde_derive = "^1.0"
bincode = "^0.9"
rand = "^0.4"
zip = "^0.3"

[dependencies.cgmath]
version = "^0.16"
features = ["serde"]

